# hackathon-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ml_system_design_doc.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  config.py  generate.py  ingest.py  llm_client.py  main.py  ranking.py  report.py  retrieval.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  demo.py  demo_scenarios.py  deps.py  exporter.py  few_shot.py  generator.py  knowledge_base.py  llm_client.py  main.py  models.py  scoring.py  tailings_parser.py
backend/scripts/: analyze_accuracy.py  analyze_judge_runs.py  batch_generate_analysis.py  build_experiments_db.py  build_lab_experiments_xlsx.py  judge_prompt_analysis.py  measure_accuracy.py  preindex_demo.py  smoke_demo.py
backend/tests/: conftest.py  test_accuracy_metrics.py  test_agentic_rag.py  test_brainstorm_topics.py  test_business_case.py  test_business_predictive.py  test_checklist.py  test_citation_align.py  test_compliance_meta.py  test_core.py  test_demo_scenarios.py  test_domain_profile.py  test_example_assets.py  test_example_context.py  (+20 more)
data/: README.md  examples.yaml
demo_runs/: Хвосты КГМК.docx  Хвосты КГМК.json  Хвосты НОФ Вкр.docx  Хвосты НОФ Вкр.json  Хвосты НОФ мед.docx  Хвосты НОФ мед.json  Хвосты ТОФ_2.docx  Хвосты ТОФ_2.json
frontend/: index.html  package.json
scripts/: run_streamlit.sh  start.sh
streamlit/: app.py  graph_viz.py  hypothesis_api.py  requirements.txt  roadmap_viz.py
tests/: test_pipeline.py
ui/: app.py
(+91 files in other folders)
