[project]
name = "hypothesis-gen-mvp"
version = "0.1.0"
description = "MVP системы генерации научных гипотез на основе локальной базы знаний"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
